fix vh overflow on mobile safari

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -638,7 +638,8 @@ i {
 #contract-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /*not 100 to compensate for mobile safari not taking bottom address bar into account*/
+  height: 94vh;
 }
 
 #contract-hero {
